Find some bugs in zonal boundaries from previous advection

--- a/IdealizeSpetral.jl/exp/HSt42/plot_fig.ipynb
+++ b/IdealizeSpetral.jl/exp/HSt42/plot_fig.ipynb
@@ -16,19 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 20, 64, 128)\n"
+      "(13, 20, 64, 128)\n"
      ]
     }
    ],
    "source": [
-    "to = 5\n",
+    "to = 13\n",
     "savepath = \"graphs/test_only_advection_all\"\n",
     "file = \"/home/Aaron/Isca_advection/IdealizeSpetral.jl/exp/HSt42/outputs/0523/test_only_advection_all.dat\"\n",
     "\n",
@@ -48,7 +48,7 @@
     "k = 0.5*(v**2+ u**2)\n",
     "print(k.shape)\n",
     "x = np.linspace(-180,180,128)\n",
-    "y = np.linspace(-55, 55,64)\n",
+    "y = np.linspace(-90, 90,64)\n",
     "xx, yy = np.meshgrid(x, y)\n",
     "\n",
     "try:\n",
@@ -61,18 +61,24 @@
     "    fig.suptitle(f\"Day {t}\")\n",
     "    cs0 = ax[0, 0].contourf(xx, yy, k[t, 19], levels=np.linspace(0, 800, 11), extend='max')\n",
     "    fig.colorbar(cs0, orientation='horizontal')\n",
-    "    \n",
     "    ax[0, 0].set_title(f\"Kinetic Energy at surface\")\n",
     "\n",
-    "    cs1 = ax[0, 1].contourf(xx, yy, k[t, 0], levels=np.linspace(0, 800, 11), extend='max')\n",
-    "    fig.colorbar(cs1, orientation='horizontal')\n",
-    "    ax[0, 1].set_title(f\"Kinetic Energy at top\")\n",
+    "    # cs1 = ax[0, 1].contourf(xx, yy, k[t, 0], levels=np.linspace(0, 800, 11), extend='max')\n",
+    "    # fig.colorbar(cs1, orientation='horizontal')\n",
+    "    # ax[0, 1].set_title(f\"Kinetic Energy at top\")\n",
+    "    # fig.colorbar(cs1, orientation='horizontal')\n",
+    "    # ax[0, 1].set_title(f\"Kinetic Energy at top\")\n",
     "\n",
-    "    cs2 = ax[1, 0].contourf(xx, yy, qv[t, 19], levels=np.linspace(-0.05, 0.15, 11), extend='both')\n",
+    "    cs1 = ax[0, 1].quiver(xx[::4, ::4], yy[::4, ::4], u[t, 19][::4, ::4], v[t, 19][::4, ::4], scale=500)\n",
+    "    ax[0, 1].quiverkey(cs1, 1.05, 1.05, 30, \"30 m/s\")\n",
+    "    ax[0, 1].set_title(f\"Wind at surface\")\n",
+    "\n",
+    "\n",
+    "    cs2 = ax[1, 0].contourf(xx, yy, qv[t, 19], levels=np.linspace(-100, 800, 11), extend='both')\n",
     "    fig.colorbar(cs2, orientation='horizontal')\n",
     "    ax[1, 0].set_title(f\"qv at sfc\")\n",
     "\n",
-    "    cs3 = ax[1, 1].contourf(xx, yy, grid_t_c_xyzt[t, 19], levels=np.linspace(250, 320, 11), extend='both')\n",
+    "    cs3 = ax[1, 1].contourf(xx, yy, grid_t_c_xyzt[t, 0], levels=np.linspace(250, 320, 11), extend='both')\n",
     "    fig.colorbar(cs3, orientation='horizontal')\n",
     "    ax[1, 1].set_title(f\"T at sfc\")\n",
     "\n",
@@ -87,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -107,15 +113,15 @@
       "  libswresample   3.  5.100 /  3.  5.100\n",
       "  libpostproc    55.  5.100 / 55.  5.100\n",
       "Input #0, image2, from '%d.png':\n",
-      "  Duration: 00:00:00.20, start: 0.000000, bitrate: N/A\n",
+      "  Duration: 00:00:00.52, start: 0.000000, bitrate: N/A\n",
       "    Stream #0:0: Video: png, rgba(pc), 3600x3600 [SAR 11811:11811 DAR 1:1], 25 fps, 25 tbr, 25 tbn, 25 tbc\n",
       "Stream mapping:\n",
       "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
       "Press [q] to stop, [?] for help\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0musing SAR=1/1\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0musing cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mprofile High, level 6.0, 4:2:0, 8-bit\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0m264 - core 157 - H.264/MPEG-4 AVC codec - Copyleft 2003-2018 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=112 lookahead_threads=16 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0musing SAR=1/1\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0musing cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mprofile High, level 6.0, 4:2:0, 8-bit\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0m264 - core 157 - H.264/MPEG-4 AVC codec - Copyleft 2003-2018 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=112 lookahead_threads=16 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
       "Output #0, mov, to '0.mov':\n",
       "  Metadata:\n",
       "    encoder         : Lavf58.29.100\n",
@@ -124,25 +130,25 @@
       "      encoder         : Lavc58.54.100 libx264\n",
       "    Side data:\n",
       "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: -1\n",
-      "frame=    5 fps=0.0 q=-1.0 Lsize=     415kB time=00:00:00.40 bitrate=8494.8kbits/s speed=0.577x    \n",
-      "video:414kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.207802%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mframe I:1     Avg QP:12.88  size:186936\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mframe P:1     Avg QP:24.61  size: 80334\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mframe B:3     Avg QP:17.98  size: 52005\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mconsecutive B-frames: 20.0%  0.0%  0.0% 80.0%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mmb I  I16..4: 50.4% 38.0% 11.6%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mmb P  I16..4:  1.5%  6.8%  4.5%  P16..4:  2.5%  2.3%  0.7%  0.0%  0.0%    skip:81.7%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mmb B  I16..4:  0.9%  1.2%  1.3%  B16..8:  7.4%  4.5%  0.9%  direct: 0.4%  skip:83.3%  L0:51.9% L1:47.4% BI: 0.7%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0m8x8 transform intra:39.3% inter:19.3%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mcoded y,uvDC,uvAC intra: 9.5% 18.8% 17.4% inter: 1.5% 2.4% 1.9%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mi16 v,h,dc,p: 86% 12%  2%  0%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mi8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 55%  8% 33%  1%  1%  0%  1%  0%  1%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mi4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 36% 26% 22%  2%  2%  2%  4%  2%  3%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mi8c dc,h,v,p: 80% 13%  6%  2%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mWeighted P-Frames: Y:0.0% UV:0.0%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mref B L0: 92.4%  7.6%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mref B L1: 94.0%  6.0%\n",
-      "\u001b[1;36m[libx264 @ 0x55d9c08daa80] \u001b[0mkb/s:3386.27\n"
+      "frame=   13 fps= 12 q=-1.0 Lsize=     393kB time=00:00:02.00 bitrate=1611.4kbits/s speed=1.78x    \n",
+      "video:392kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.241100%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mframe I:1     Avg QP:13.13  size:331779\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mframe P:6     Avg QP:18.51  size:  6652\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mframe B:6     Avg QP:13.40  size:  4924\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mconsecutive B-frames: 15.4% 61.5% 23.1%  0.0%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mmb I  I16..4: 41.9% 44.6% 13.5%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mmb P  I16..4:  0.2%  0.6%  0.4%  P16..4:  0.5%  0.0%  0.0%  0.0%  0.0%    skip:98.3%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mmb B  I16..4:  0.3%  0.1%  0.2%  B16..8:  0.9%  0.1%  0.0%  direct: 0.0%  skip:98.2%  L0:38.8% L1:60.9% BI: 0.2%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0m8x8 transform intra:44.1% inter:9.4%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mcoded y,uvDC,uvAC intra: 9.0% 7.7% 7.2% inter: 0.1% 0.1% 0.1%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mi16 v,h,dc,p: 89% 10%  2%  0%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mi8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 62%  4% 33%  0%  0%  0%  0%  0%  0%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mi4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 46% 16% 16%  4%  3%  5%  3%  4%  2%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mi8c dc,h,v,p: 90%  5%  4%  1%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mWeighted P-Frames: Y:0.0% UV:0.0%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mref P L0: 86.3%  0.3% 12.6%  0.9%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mref B L0: 89.3%  9.1%  1.6%\n",
+      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mkb/s:1234.56\n"
      ]
     }
    ],
