--- a/IdealizeSpetral.jl/exp/HSt42/plot_fig.ipynb
+++ b/IdealizeSpetral.jl/exp/HSt42/plot_fig.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
     "    ax[0, 1].set_title(f\"Wind at surface\")\n",
     "\n",
     "\n",
-    "    cs2 = ax[1, 0].contourf(xx, yy, qv[t, 19], levels=np.linspace(-100, 800, 11), extend='both')\n",
+    "    cs2 = ax[1, 0].contourf(xx, yy, qv[t, 19], levels=np.linspace(-0.4, 1.2, 11), extend='both')\n",
     "    fig.colorbar(cs2, orientation='horizontal')\n",
     "    ax[1, 0].set_title(f\"qv at sfc\")\n",
     "\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,10 +118,10 @@
       "Stream mapping:\n",
       "  Stream #0:0 -> #0:0 (png (native) -> h264 (libx264))\n",
       "Press [q] to stop, [?] for help\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0musing SAR=1/1\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0musing cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mprofile High, level 6.0, 4:2:0, 8-bit\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0m264 - core 157 - H.264/MPEG-4 AVC codec - Copyleft 2003-2018 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=112 lookahead_threads=16 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0musing SAR=1/1\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0musing cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mprofile High, level 6.0, 4:2:0, 8-bit\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0m264 - core 157 - H.264/MPEG-4 AVC codec - Copyleft 2003-2018 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=112 lookahead_threads=16 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=5 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00\n",
       "Output #0, mov, to '0.mov':\n",
       "  Metadata:\n",
       "    encoder         : Lavf58.29.100\n",
@@ -130,25 +130,26 @@
       "      encoder         : Lavc58.54.100 libx264\n",
       "    Side data:\n",
       "      cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: -1\n",
-      "frame=   13 fps= 12 q=-1.0 Lsize=     393kB time=00:00:02.00 bitrate=1611.4kbits/s speed=1.78x    \n",
-      "video:392kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.241100%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mframe I:1     Avg QP:13.13  size:331779\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mframe P:6     Avg QP:18.51  size:  6652\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mframe B:6     Avg QP:13.40  size:  4924\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mconsecutive B-frames: 15.4% 61.5% 23.1%  0.0%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mmb I  I16..4: 41.9% 44.6% 13.5%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mmb P  I16..4:  0.2%  0.6%  0.4%  P16..4:  0.5%  0.0%  0.0%  0.0%  0.0%    skip:98.3%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mmb B  I16..4:  0.3%  0.1%  0.2%  B16..8:  0.9%  0.1%  0.0%  direct: 0.0%  skip:98.2%  L0:38.8% L1:60.9% BI: 0.2%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0m8x8 transform intra:44.1% inter:9.4%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mcoded y,uvDC,uvAC intra: 9.0% 7.7% 7.2% inter: 0.1% 0.1% 0.1%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mi16 v,h,dc,p: 89% 10%  2%  0%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mi8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 62%  4% 33%  0%  0%  0%  0%  0%  0%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mi4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 46% 16% 16%  4%  3%  5%  3%  4%  2%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mi8c dc,h,v,p: 90%  5%  4%  1%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mWeighted P-Frames: Y:0.0% UV:0.0%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mref P L0: 86.3%  0.3% 12.6%  0.9%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mref B L0: 89.3%  9.1%  1.6%\n",
-      "\u001b[1;36m[libx264 @ 0x562206c6ed80] \u001b[0mkb/s:1234.56\n"
+      "frame=   13 fps= 11 q=-1.0 Lsize=     857kB time=00:00:02.00 bitrate=3509.3kbits/s speed=1.62x    \n",
+      "video:856kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.111480%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mframe I:1     Avg QP:13.50  size:173657\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mframe P:3     Avg QP:22.39  size: 65675\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mframe B:9     Avg QP:21.50  size: 56114\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mconsecutive B-frames:  7.7%  0.0%  0.0% 92.3%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mmb I  I16..4: 36.2% 55.1%  8.7%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mmb P  I16..4:  0.7%  2.8%  2.6%  P16..4:  2.0%  1.0%  0.4%  0.0%  0.0%    skip:90.4%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mmb B  I16..4:  0.3%  0.5%  1.3%  B16..8:  4.6%  1.8%  0.6%  direct: 0.2%  skip:90.7%  L0:50.0% L1:46.6% BI: 3.5%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0m8x8 transform intra:49.6% inter:7.3%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mcoded y,uvDC,uvAC intra: 11.8% 8.5% 7.9% inter: 1.2% 0.5% 0.4%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mi16 v,h,dc,p: 84% 14%  2%  0%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mi8 v,h,dc,ddl,ddr,vr,hd,vl,hu: 56%  4% 39%  0%  0%  0%  0%  0%  0%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mi4 v,h,dc,ddl,ddr,vr,hd,vl,hu: 29% 19% 32%  3%  3%  3%  4%  3%  3%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mi8c dc,h,v,p: 90%  6%  3%  1%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mWeighted P-Frames: Y:0.0% UV:0.0%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mref P L0: 67.3%  1.4% 16.2% 15.0%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mref B L0: 79.2% 16.2%  4.7%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mref B L1: 90.9%  9.1%\n",
+      "\u001b[1;36m[libx264 @ 0x55f5b9939d00] \u001b[0mkb/s:2694.49\n"
      ]
     }
    ],
